# RustCSCoins

./: .travis.yml  README.md
cscoin-miner/: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  private_key.pem  public_key.pem
cscoin-miner/config/: config.json  env.rc
cscoin-miner/src/: main.rs  miner.rs
cscoin-miner/src/client_miner/: client_miner.rs  miner.rs  mod.rs  shortest_path.rs
cscoin-miner/src/server_comms/: cmd_response.rs  error.rs  mod.rs  signature.py
cscoin-miner/src/threads/: mod.rs  worker.rs
