[package]
name = "cscoin-miner"
version = "0.1.0"
authors = ["Alexis Grondin <agrondin1@hotmail.com>", "Alex Frappier Lachapelle <cyberunner23@protonmail.com>"]

[dependencies]
openssl      = "0.7.6"
rust-crypto  = "^0.2"
serde        = "0.9"
serde_derive = "0.9"
serde_json   = "0.9"
websocket    = "0.17.1"
