[package]
name = "cscoin-miner"
version = "0.1.0"
authors = ["Alexis Grondin <agrondin1@hotmail.com>", "Alex Frappier Lachapelle <cyberunner23@protonmail.com>"]

[dependencies]
crossbeam    = "0.2.10"
openssl      = "0.7.12"
rust-crypto  = "^0.2"
rustc-serialize = "0.3.23"
serde        = "0.9"
serde_derive = "0.9"
serde_json   = "0.9"
websocket    = "0.17.1"
